# shiny-dashboard-hub

./: .gitignore  LICENSE-DATA.md  Makefile  README.md
.github/workflows/: etl-ci.yml  nightly-etl.yml  shinylive-deploy.yml
THESIS/: README.md
THESIS/thesis_energy_mastr_shiny/: AGENT_CONTEXT_THESIS_MASTR_SHINY.md  DESCRIPTION  README.md  app.R  run_app_thesis_energy.R  thesis_menu_app.R
WORK/: README.md
WORK/docs/: AGENT_HANDOFF.md  AGENT_HANDOFF_IONOS_VPS.md  ARCHITECTURE.md  AUTONOMY.md  DATA_SCHEMA.md  HOW_TO_RUN.md  IONOS_VPS_HUB.md  Posit_RStudio_Licensing_Use_Case_Assessment.md  README.md  RSTUDIO_CONTEXTS.md  RUN.md  SERVER.md  SHINYLIVE.md  SOLUTION.md
WORK/etl/: README.md  pyproject.toml  schema_snapshot.json
WORK/etl/src/mastr_etl/: __init__.py  aggregates.py  build_duckdb.py  config.py  download.py  parse.py  schema_diff.py
WORK/etl/src/mastr_etl.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
WORK/etl/tests/: test_build_duckdb_smoke.py  test_parse_smoke.py
WORK/grafana/: prometheus-scrape-snippet.yml
WORK/ops-portal/: index.html  nginx-about.conf
WORK/shiny/: DESCRIPTION  README.md  app.R
docs/: AGENT_HANDOFF.md  RSTUDIO_CONTEXTS.md  RUN.md  SOLUTION.md
scripts/: install-ionos-desktop-launcher.sh  ionos-vps-rstudio-candida-setup.sh  launch-candida-desktop.sh  launch-ionos-hub.sh  launch-ionos-netdata.sh  launch-ionos-ssh.sh  open-ionos-netdata.sh  setup-ionos-ssh-key.sh  vps-infra-shell.sh
scripts/systemd/: mastr-care-workers-thuringia.service  mastr-site-traffic.service
shiny/: README.md  app.R
(+103 files in other folders)
